--- a/config/config.json
+++ b/config/config.json
@@ -9,14 +9,14 @@
   "test": {
     "username": "sql12759428",
     "password": "jys97Y8nhl",
-    "database": "database_test",
+    "database": "sql12759428",
     "host": "sql12.freesqldatabase.com",
     "dialect": "mysql"
   },
   "production": {
     "username": "sql12759428",
     "password": "jys97Y8nhl",
-    "database": "database_production",
+    "database": "sql12759428",
     "host": "sql12.freesqldatabase.com",
     "dialect": "mysql"
   }
